--- a/Book/Book/Properties/Resources.resx
+++ b/Book/Book/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="container" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\container.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;gb2312</value>
   </data>
+  <data name="kindlegen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kindlegen.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="style" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\style.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
